# enclave

./: .gitignore  .gitmodules  README.md  THIRD_PARTY_NOTICES.md  enclave.yaml  enclave.yaml.example  flake.nix  install.sh  package-lock.json  package.json  playwright.config.ts  pyproject.toml
.github/prompts/: opsx-apply.prompt.md  opsx-archive.prompt.md  opsx-explore.prompt.md  opsx-propose.prompt.md  opsx-sync.prompt.md
android/: .gitignore  README.md  build-apk.sh  sdk.nix
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
config/: enclave.example.yaml
container/: Containerfile  Containerfile.light  kagi-search.py  kagi.py  patch-copilot-cli.py  qemu-console.py
container/mimir-bin/: .gitignore  README.md
docs/: ROADMAP.md  agent-ipc-api.md  design.md  qemu-console.md
openspec/: config.yaml
openspec/changes/add-decision-fork-menu/: design.md  proposal.md  tasks.md
openspec/changes/add-decision-fork-menu/specs/decision-fork-menu/: spec.md
openspec/changes/add-openspec-lifecycle-archive/: design.md  proposal.md  tasks.md
openspec/changes/add-openspec-review-cycle/: design.md  proposal.md  tasks.md
openspec/changes/add-openspec-review-cycle/specs/openspec-review-cycle/: spec.md
openspec/changes/add-openspec-ui/: design.md  proposal.md  tasks.md
openspec/changes/add-webui-approvals/: proposal.md  tasks.md
openspec/changes/archive/2026-07-09-fusion-blind-judge/: proposal.md  tasks.md
openspec/changes/archive/2026-07-09-fusion-consensus-verdict/: tasks.md
openspec/changes/fusion-blind-judge/: tasks.md
openspec/changes/fusion-consensus-verdict/: proposal.md  tasks.md
openspec/changes/make-matrix-optional/: proposal.md  tasks.md
openspec/changes/openspec-per-project/: design.md  proposal.md  tasks.md
openspec/specs/fusion/: spec.md
priv-broker/: Cargo.toml
priv-broker/config/: enclave-priv-broker.service  priv-broker.toml
priv-broker/src/: config.rs  executor.rs  main.rs  protocol.rs  server.rs
scripts/: insights.py  insights_narrate.py  insights_render.py  inspect_events.py
services/: enclave-webui.service
spikes/spike1_copilot_in_podman/: Containerfile  README.md  test_sdk.py
spikes/spike2_matrix_e2ee/: README.md  bot.py
spikes/spike3_ipc_bridge/: Containerfile  README.md  container_client.py  host_server.py
src/enclave/: __init__.py
src/enclave/agent/: bug_tracker.py  ipc_client.py  main.py  plugins.py
src/enclave/agent/prompts/: base.md  concierge.md  dev.md  guidelines.md  host.md  light.md
src/enclave/cli/: __init__.py  main.py  tui.py
src/enclave/common/: audit.py  config.py  cost_tracker.py  fusion.py  logging.py  openspec_log.py  panel.py  protocol.py
src/enclave/orchestrator/: acp_bridge.py  acp_client.py  approval.py  commands.py  container.py  control.py  display.py  ipc.py  landlock.py  main.py  matrix_client.py  mcp_server.py  memory.py  mimir_librarian.py  mimir_sidecar.py  mounts.py  null_matrix_client.py  permissions.py  priv_client.py  router.py  scheduler.py  search.py  session_manager.py  sub_agents.py  watcher.py
src/enclave/webui/: __init__.py  app.py  auth.py  deferred_asks.py  event_persister.py  event_store.py
src/enclave/webui/frontend/: index.html  package-lock.json  package.json  vite.config.js
src/enclave/webui/routes/: __init__.py  asks.py  bugs.py  chat.py  fusion.py  memories.py  notifications.py  openspec.py  panel.py  review_state.py  schedules.py  sessions.py
systemd/: enclave.service
tests/: conftest.py
tests/integration/: test_e2e.py  test_webui.py
tests/playwright/: auth-helper.js  webui.spec.js
tests/unit/: test_agent_main.py  test_approval.py  test_audit.py  test_cli.py  test_commands.py  test_concierge.py  test_config.py  test_container.py  test_control_persistence.py  test_cost_tracker.py  test_display.py  test_fusion_prompts.py  test_history_reconstruct.py  test_host_mode.py  test_ipc.py  test_landlock.py  test_logging.py  test_matrix_optional.py  test_mcp_server.py  test_memory.py  test_mounts.py  test_oneshot_timeout.py  test_panel.py  test_permissions.py  test_plugins.py  test_priv_client.py  test_protocol.py  test_restart_nudge.py  test_router.py  test_scheduler.py  test_structured_response_matrix.py  test_sub_agents.py  test_watcher.py  test_webui_matrix_guard.py
(+53 files in other folders)
