[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enclave"
version = "0.1.0"
description = "AI agent instances controlled via Matrix, sandboxed in podman containers"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "github-copilot-sdk",
    "matrix-nio[e2ee]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/enclave"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
