[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enclave"
version = "0.1.0"
description = "AI agent instances controlled via Matrix, sandboxed in podman containers"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "github-copilot-sdk",
    "matrix-nio",
    # E2EE deps (matrix-nio >=0.25 dropped the [e2ee] extra)
    "python-olm",
    "cachetools",
    "peewee",
    "atomicwrites",
    "pyyaml>=6.0",
    # CLI / TUI
    "rich>=13.0",
    "textual>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "ruff",
    "mypy",
]
mcp = [
    "mcp[cli]>=1.0",
]
webui = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "aiofiles>=23.0",
    "aiohttp>=3.9",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
]

[project.scripts]
enclave = "enclave.orchestrator.main:main"
enclavectl = "enclave.cli.main:main"
enclave-webui = "enclave.webui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/enclave"]
artifacts = ["src/enclave/agent/prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require external services (Matrix, podman)",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
