[package]
name = "enclave-priv-broker"
version = "0.1.0"
edition = "2021"
description = "Privilege escalation broker for Enclave — approval-based root operations via Matrix"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
